Correction taille gap

--- a/assets/scss/_skills.scss
+++ b/assets/scss/_skills.scss
@@ -4,7 +4,7 @@
     @media screen and (max-width: 1200px) {
         grid-template-columns: repeat(1, 1fr);
     }
-    gap: 10px;
+    gap: 25px;
     .skills_card {
         display: flex;
         flex-direction: column;
